syntax = "proto3";
// 第一行说明语法版本

// 生成 golang 的包名
option go_package = "example/greeter";

// 服务名
service Greeter {
    // 接口声明, 类似http 的一来一回短消息
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // server stream    client端短连接 server端长连接
    rpc LotsOfReplies (HelloRequest) returns (stream HelloReply) {}
    // client stream    server端短连接 client端长连接
    rpc LotsOfGreetings (stream HelloRequest1) returns (HelloReply) {}
    // Bidirectional streaming      client,server全部长连接
    rpc BidiHello(stream HelloRequest1) returns (stream HelloReply) {}
}
// 消息结构体 HelloRequest
message HelloRequest {
    // 类型 名称 标识符(用于标识字段在消息中的二进制格式)
    string name = 1;
}
// 消息结构体 HelloRequest1
message HelloRequest1 {
    string name = 1;
    int32 index = 2;
}
// 消息结构体 HelloReply
message HelloReply {
    string message = 1;
}
